airgap/manifests/rancher-ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-rancher
  namespace: cattle-system
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  gatewayClassName: cilium
  listeners:
  - name: https-rancher
    protocol: HTTPS
    port: 443
    hostname: "rancher.localdomain"
    tls:
      certificateRefs:
      - kind: Secret
        name: tls-rancher-ingress
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-rancher
  namespace: cattle-system
spec:
  parentRefs:
  - name: tls-rancher
  hostnames:
  - "rancher.localdomain"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: rancher
      port: 80
